# comingprice

./: .gitignore  .replit  LICENSE  README.md  app.py  config.py  db.py  pyproject.toml
attached_assets/: Pasted-0-bash-comimg-project-gitignore-replit-env-example-Procfile-requir-1748863861017.txt
blueprints/: __init__.py
blueprints/auth/: __init__.py  forms.py  routes.py
blueprints/dashboard/: __init__.py  routes.py
blueprints/notifications/: __init__.py  routes.py
blueprints/products/: __init__.py  forms.py  routes.py
static/css/: styles.css
static/js/: main.js
templates/: 404.html  base.html  index.html
templates/auth/: login.html  profile.html  register.html
templates/dashboard/: analytics.html  history.html
templates/notifications/: settings.html
templates/products/: compare.html  history.html  result.html  search.html
utils/: crawler.py  discount_engine.py  email_notifier.py  ocr_processor.py
